add_executable(Textures1 ${CMAKE_CURRENT_SOURCE_DIR}/textures.cpp)
target_link_libraries(Textures1 PRIVATE spdlog::spdlog SDL2::SDL2 glad::glad stb::stb util)
copy_file(shader.vs.glsl Textures1)
copy_file(shader.fs.glsl Textures1)
copy_file(wall.jpg Textures1)
copy_file(container.jpg Textures1)
copy_file(awesomeface.png Textures1)
